--- a/css/styles.css
+++ b/css/styles.css
@@ -34,5 +34,29 @@ input {
 
 #button:hover {
     cursor: pointer;
-    opacity: 0.9;;
+    opacity: 0.9;
+}
+
+ol {padding-left: 20px;}
+
+ol li {padding: 5px; color: #000;}
+
+ol li:nth-child(even){background: #dfdfdf;}
+
+.strike{text-decoration: line-through;}
+
+li:hover {
+    cursor: pointer;
+}
+
+.delete {
+    display: none;
+}
+
+li > crossOutButton {
+    background: none;
+    border: none;
+    float: right;
+    color: #025f70;
+    font-weight: 800;
 }
